etc/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Sep  9 15:13:18 2026
*filter
:INPUT ACCEPT [112642:132411223]
:FORWARD DROP [11:452]
:OUTPUT ACCEPT [94828:129133188]
-A INPUT -i enp1s0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -p udp -m udp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i enp1s0 -p udp -m udp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i enp1s0 -p udp -m udp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.2.0/24 -i enp1s0 -o enx3c18a0d58d07 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.2.0/24 -i enx3c18a0d58d07 -o enp1s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Sep  9 15:13:18 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Sep  9 15:13:18 2026
*nat
:PREROUTING ACCEPT [3977:698951]
:INPUT ACCEPT [3452:247156]
:OUTPUT ACCEPT [4110:276787]
:POSTROUTING ACCEPT [4110:276787]
-A PREROUTING -s 192.168.2.93/32 -i enp1s0 -p tcp -m multiport --dports 80,443 -j RETURN
-A PREROUTING -i enp1s0 -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -i enp1s0 -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -i enp1s0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A PREROUTING -i enp1s0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3129
-A POSTROUTING -s 192.168.2.0/24 -o enx3c18a0d58d07 -j MASQUERADE
COMMIT
# Completed on Wed Sep  9 15:13:18 2026
